# kdr-invenio-migrator

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
invenio_migrator/: __init__.py  cli.py  config.py  errors.py  interfaces.py  mappers.py
invenio_migrator/clients/: __init__.py  source.py  target.py  zenodo.py
invenio_migrator/resources/: __init__.py  resources.py
invenio_migrator/services/: __init__.py  cli_service.py  migration.py
invenio_migrator/utils/: logger.py  mapper.py
kth_invenio_migrator/: __init__.py  cli.py  config.py 
kth_invenio_migrator/clients/: __init__.py
scripts/: ruff_fix_format.py
tests/: conftest.py  test_cli.py  test_cli_service.py  test_errors.py  test_interfaces.py  test_invenio_client.py  test_mappers.py  test_migration_service.py  test_zenodo_client.py  test_zenodo_harvester.py
