[project]
name = "kth-invenio-migrator"
version = "0.1.0"
description = "Harvest and migrate Zenodo communities to KDR (KTH Data Repository)"
readme = "README.md"
authors = [
    { name = "Sam Arbid", email = "samaa2@kth.se" }
]
requires-python = ">=3.12.10"
dependencies = [
    "inveniordm-py>=0.1.1",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]

[project.scripts]
kth-invenio-migrator = "kth_invenio_migrator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["kth_invenio_migrator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
