[project]
name = "kth-invenio-migrator"
version = "0.1.0"
description = "Harvest and migrate Zenodo communities to KDR (KTH Data Repository)"
readme = "README.md"
authors = [
    { name = "Sam Arbid", email = "samaa2@kth.se" }
]
requires-python = ">=3.12.10"
dependencies = [
    "inveniordm-py>=0.1.1",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]

[project.scripts]
kth-invenio-migrator = "kth_invenio_migrator.cli:main"
format = "scripts.ruff_fix_format:main"

[tool.hatch.build.targets.wheel]
packages = ["kth_invenio_migrator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--verbose"

[tool.ruff.lint]
# see: https://docs.astral.sh/ruff/configuration/
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B", "E101"]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
# 5. Use single quotes in `ruff format`.
# quote-style = "single"